# UAM_TERIMAL

./: .gitignore  1.md  TRC_draft_terminal_interface.md  TRC_draft_terminal_interface_CN.md  main.py  pyproject.toml  startup.m  二轮实验修改意见.md  交接文档.md  交接文档2.md  实验任务书.md  实验反馈.md  实验安排.md  实验报告模板.md  实验报告模板_ASF.md  新的实验要求.md  论文骨架.md
+asf/+core/: BackboneEdge.m  ConnectorArc.m  NetworkDesign.m  PortConfig.m  ProblemInstance.m  TerminalConfig.m
+uam/+core/: makeKey.m  (+8 more)
doc-a/: action_plan_post_feedback_20260403.md  baseline_modeling_comparison.md  experiment_briefing_20260401.md  full_briefing_20260401.md  implementation_plan_for_review.md  issues_and_open_questions_20260403.md  literature_survey_task.md  model_review_for_idea_context.md  modeling_explainer_20260401.md  negative_regret_diagnosis.md  paper_progress_assessment_20260401.md  phase1-review.md  phase3_evaluation_report.md  questions_for_idea_context.md
literature/: reading_notes.md
paper/: build.bat  build_cn.bat  main.tex  main_cn.tex  references.bib
results/: exp2_results.json  exp3_results.json
scripts/: run_city_scale.bat  run_city_scale_checkpoint.m  run_e0.m  run_e1.m  run_exp0.bat  run_exp4_medium.bat  run_exp4b.bat  run_exp4b_s.bat  run_exp4bs.bat  run_exp4c.bat  run_exp4c_audit.bat  run_exp4d.bat  run_exp4d_held_out.bat  run_exp5.bat  run_exp5_proxy.bat  run_exp6.bat  run_exp7.bat  run_exp8.bat
tests/: TestAbstraction.m  TestCore.m  TestE0.m  TestE1.m  TestEndToEnd.m  TestSolver.m  TestTerminalModel.m  run_all_tests.m  test_core.py  test_interface.py  test_solver_integration.py  test_truth.py
(+100 files in other folders)
